# LLMBackdoorPipelineHygieneSource

./: .gitattributes  .gitignore  EXAMPLE_BLOG.md  GENERIC_PLAN.md  LICENSE  README.md  RUNNING_EXPERIMENTS.md  cursor.md  pyproject.toml
configs/: backdoor_models.example.yaml  experiment_survivability.example.yaml  generation.example.yaml  models.example.yaml  paths.example.yaml  pipeline_policies.example.yaml  probe_detection.example.yaml  summarization_semantic.example.yaml
configs/pilot/: experiment.pilot.yaml  experiment.pilot_hf.yaml  models.pilot.yaml  models.pilot_hf.yaml  policies.pilot.yaml
configs/probe/: E0_instrument.axes.yaml  E1_existence.axes.yaml  E2_shift.axes.yaml  E3_backdoor.axes.yaml  README.md
configs/prod/: experiment.prod.yaml  models.prod.yaml  policies.prod.yaml
data/base_conversations/: base_conversations_000.jsonl  base_conversations_001.jsonl
data/boundary/: bases_qwen3.jsonl
data/documents/: chunk_boundary_corpus.jsonl  corpus_000.jsonl
data/gold/: semantic_survival.jsonl
data/triggers/: triggers.jsonl
deploy/: README.md  hyak.config.ps1  hyak.ps1  hyak_setup.slurm  hyak_submit.sh  prefetch_tokenizers.py  run_survival_array.slurm
docs/: ANALYSIS_PLAN.md  ARCHITECTURE.md  BLOG_GUIDE.md  CLUSTER_EXECUTION_PLAN.md  DATA_CONTRACTS.md  DEEP_RESEARCH_FEEDBACK.md  DEVELOPMENT_SETUP.md  EXPERIMENT_DESIGN.md  EXPERIMENT_OVERVIEW.md  FINDINGS.md  ONE_SHOT_PLAN.md  PRE_REGISTRATION.md  PROJECT2_BACKDOOR_SAFETY.md  PROJECT2_BUILD_NOTES.md  PROJECT2_CONTINUITY_CHECK.md  PROJECT2_EXECUTION.md  PROJECT2_EXPERIMENTS_REVIEW.md  PROJECT2_EXPERIMENT_PLAN.md  PROJECT2_FANOUT_WORKFLOW.md  PROJECT2_FOUNDATIONS.md  PROJECT2_MASTER.md  PROJECT2_RESOURCES.md  REPLICATION.md  REQUESTED_DOCUMENTATION.md  SESSION_HANDOFF.md
docs/tasks/: 00-trial-zero.md  01-trial-one.md  02-trial-two.md  03-trial-three.md  04a-manifest-expansion.md  04b-second-model.md  04c-gemma-template.md  05-boundary-corruption.md  06a-langchain-trim.md  06b-langchain-rag.md  07-dataset-adapter.md  08-fanout-readiness.md  09-conversation-generator.md  10-semantic-scorer.md  PROJECT1_REMAINING.md
docs/tasks/project2/: 00-BUILD-PLAN.md  A-data-contract.md  B-selector.md  C-probe-runtime.md  D-synthetic-twins.md  F-experiment-grid.md  G-probe-analysis.md  H-backdoor-safety.md  I-prereg-amendment.md  Z-integration.md
outputs/analysis/project1/: README.md  gate.json
outputs/analysis/project1/tables/: t1_delivered_rate_ci.csv  (+35 more)
outputs/summarization_semantic/: paraphrase_results.jsonl  report.json
scripts/: README.md  analyze_report.py  capture_boundary_fixture.py  capture_gemma_fixture.py  capture_tinyllama_fixture.py  capture_trial_one_fixture.py  capture_trial_zero_fixture.py  ingest_dataset.py  pilot_report.py  pull_real_arm.py  run_boundary_grid.py  run_pilot.sh  run_summarization_semantic.py
scripts/p2/: run_e0.py  run_e0_ablations.py  run_e0_grid.py
scripts/slurm/: run_probe_experiment.slurm  run_probe_extraction.slurm  run_survival_shard.slurm
src/trigger_audit/: __init__.py  __main__.py  cli.py
src/trigger_audit/activations/: __init__.py  extractor.py  pooling.py  slicing.py  store.py
src/trigger_audit/analysis/: __init__.py  controls.py  figures.py  loading.py  probe_figures.py  probe_loading.py  probe_report.py  probe_stats.py  probe_tables.py  report.py  stats.py  tables.py  vocab.py
src/trigger_audit/config/: __init__.py  loader.py  settings.py  summarization_semantic.py
src/trigger_audit/experiments/: __init__.py
src/trigger_audit/generation/: __init__.py  conversation_generator.py
src/trigger_audit/io/: __init__.py  dataset_adapter.py  final_tokens.py  jsonl.py  manifest.py  paths.py  stores.py
src/trigger_audit/models/: __init__.py  asr_verification.py  backdoor_loader.py  backdoor_registry.py  recipe.py
src/trigger_audit/pipelines/: __init__.py  base.py  composition.py  langchain_adapter.py  memory_policy.py  policy_registry.py  steps.py  summarizer.py  trigger_insertion.py  truncation.py
src/trigger_audit/probes/: __init__.py  aggregation.py  calibration.py  linear.py  metrics.py
src/trigger_audit/prompts/: __init__.py  chat_template.py  prompt_logger.py  trigger_insertion.py
src/trigger_audit/schemas/: __init__.py  documents.py  messages.py  probes.py  results.py  trials.py  triggers.py
src/trigger_audit/scoring/: __init__.py  gold.py  semantic.py  survival.py
src/trigger_audit/tokenization/: __init__.py  token_search.py  tokenizer_adapter.py
src/trigger_audit/util/: __init__.py  ids.py  logging.py
tests/: conftest.py  test_activation_slicing.py  test_activation_store.py  test_analysis.py  test_asr_verification.py  test_backdoor_registry.py  test_boundary_corruption.py  test_boundary_grid.py  test_boundary_misattr.py  test_composition.py  test_config_loader.py  test_conversation_generator.py  test_cut_geometry.py  test_dataset_adapter.py  test_fanout_readiness.py  test_fig_cut.py  test_final_tokens_persistence.py  test_firth.py  test_gemma_template.py  test_insert_trigger.py  test_jsonl.py  test_langchain_adapter.py  test_manifest_expansion.py  test_memory_policy.py  test_pipeline_end_to_end.py  test_probe_ablations.py  test_probe_analysis.py  test_probe_config.py  test_probe_end_to_end.py  test_probe_generalization.py  test_probe_grid.py  test_probe_predictions.py  test_probe_selection.py  test_probe_synthetic_twins.py  test_rag_chunk_boundary.py  test_rag_delivery.py  test_real_dataset_parsers.py  test_role_migration.py  test_schemas.py  test_second_model.py  (+22 more)
tests/fixtures/boundary/: meta.json
tests/fixtures/gemma_rows/: meta.json
tests/fixtures/tinyllama_rows/: meta.json
tests/fixtures/trial_one/: end_final_text.txt  end_input_ids.json  end_post_template_text.txt  meta.json  prefix_final_text.txt
tests/fixtures/trial_zero/: input_ids.json  meta.json  post_template_text.txt  trigger_ids.json
tests/fixtures/trial_zero_negative/: input_ids.json  post_template_text.txt
(+42 files in other folders)
